# movie-recommendation-system

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/predict/: predict.py
src/train/: train.py
