[tool.poetry]
name = ""
version = "0.1.0"
description = "find similar movies"
authors = ["Mighty Crystal <28828332+shuijing1996@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.10,<3.10"
pandas = "^2.0.3"
transformers = "^4.31.0"
ipython = "^8.14.0"
scikit-learn = "^1.3.0"
sentence-transformers = "^2.2.2"
pylint = "^2.17.5"
yapf = "^0.40.1"
pre-commit = "^3.3.3"
torch = "2.0.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.'MESSAGES CONTROL']
# Disable the message, report, category or checker with the given id(s).
disable = [
	"import-error"
]
